--- a/styles.css
+++ b/styles.css
@@ -105,18 +105,62 @@ a{
 }
 
 .project-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: linear-gradient(#0B0C10 30%, #21263b);
-    padding: 5rem 10rem;
+    padding: 5rem 0;
     text-align: center;
 }
 
 .project-section-title{
     max-width: 700px;
-    margin: 0 auto 6rem auto;
+    margin: 0 auto 3rem auto;
+    transition: color .5s ease-in-out, box-shadow .5s ease-in-out;
+    padding: 0.5rem 0;
+}
+
+.project-section-title:hover{
+    box-shadow: inset 700px 0 0 0 #C5C7C7;  
+    color: #0B0C10;
 }
 
 .projects-grid{
+    width: 100%;
+    grid-gap: 4rem;
     display: grid;
     max-width: 1280px;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
+
+.projects-grid > a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #41556d;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 0.15rem;
+}
+
+.project-picture{
+    width: 100%;
+    height: calc(100% );
+    object-fit: cover;
+}
+
+.project-title{
+    font-size: 1.5rem;
+    padding: 1rem 0.5rem;
+}
+
+.effect{
+    color: #41556d;
+    transition: color 0.3s ease-out;
+}
+
+.projects-grid > a:hover{
+    cursor: pointer;
+    .effect{
+        color: #b08857;
+    }
 }
