--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,14 @@ a{
         color: #b08857;
     }
 }
+
+@media (max-width : 700px){
+    #navbar{
+        justify-content: center;
+    }
+    #welcome-section{
+        background: linear-gradient(60deg, rgba(31,40,51,0.7), rgba(26,28,31,0.9)), url(https://wallpaperaccess.com/full/1922859.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+}
