--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 *, *::before, *::after{
     box-sizing: inherit;
@@ -18,6 +19,7 @@ body{
     background-color: #45A29E;
     width: 100%;
     position: fixed;
+    z-index: 5;
     display: flex;
     justify-content: flex-end;
 }
@@ -48,6 +50,7 @@ body{
 
 a{
     text-decoration: none;
+    color: inherit;
 }
 
 #welcome-section{
@@ -105,12 +108,7 @@ a{
 }
 
 .project-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background: linear-gradient(#0B0C10 30%, #21263b);
-    padding: 5rem 0;
-    text-align: center;
 }
 
 .project-section-title{
@@ -165,6 +163,83 @@ a{
     }
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 1rem;
+    text-align: center;
+}
+
+.reveal {
+    opacity: 0;
+}
+  
+.reveal.active {
+    opacity: 1;
+}
+.active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
+}
+@keyframes fade-bottom {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+}
+
+.contact-sect{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 80vh;
+    padding: 0 1.8rem;
+    background: linear-gradient(60deg, #1F2833, #1a1c1f);
+}   
+
+.contact-header h2{
+    color: white;
+    text-transform: capitalize;
+    font-size: 3.7rem;
+    font-family: Abril Fatface;
+    margin-bottom: 2rem;
+}
+
+.contact-app{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    flex-wrap: wrap;
+}
+
+.contact-details{
+    font-size: 1.7rem;
+    display: inline-block;
+    text-shadow: 2px 2px 1px #1f1f1f;
+    font-family: Tahoma;
+    padding: 1rem 2rem;
+}
+
+footer{
+    border-top: solid #66FCF1 0.3rem;
+    background: linear-gradient(60deg, #1F2833, #1a1c1f);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+footer p{
+    font-size: 1rem;
+}
+
 @media (max-width : 700px){
     #navbar{
         justify-content: center;
@@ -173,5 +248,23 @@ a{
         background: linear-gradient(60deg, rgba(31,40,51,0.7), rgba(26,28,31,0.9)), url(https://wallpaperaccess.com/full/1922859.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+    }
+    .projects-grid{
+        width: 100%;
+        grid-gap: 2rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+    #welcome-section h2{
+        font-size: 3rem;
+    }
+    #welcome-section p{
+        font-size: 1.5rem;
+    }
+    .contact-header h2{
+        font-size: 3rem;
+    }
+    .contact-details{
+        font-size: 1.4rem;
     }
 }
