--- a/styles.css
+++ b/styles.css
@@ -286,4 +286,7 @@ footer p{
         justify-items: center;
         flex-wrap: wrap;
     }
+    #welcome-section h1{
+        font-size: 2.7rem;
+    }
 }
