update contact header font

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ a{
     color: white;
     text-transform: capitalize;
     font-size: 3.7rem;
-    font-family: Abril Fatface;
+    font-family: Hind;
     margin-bottom: 2rem;
 }
 
